demo/projects/esp32/az-esp-freertos/examples/tls_basic/log_esp2.txt
[0/1] Re-running CMake...
-- Project is not inside a git repository, or git repository has no commits; will not use 'git describe' to determine PROJECT_VER.
-- Building ESP-IDF components for target esp32
-- starting base component register
Loading defaults file /mnt/c/Tara/Code/az-esp-freertos/examples/tls_basic/sdkconfig.defaults...
/tmp/confgen_tmp7DOq8t:5 line was updated to CONFIG_NEWLIB_NANO_FORMAT=n
-- App "tls_basic" version: 1
-- Adding linker script /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_rom/esp32/ld/esp32.rom.newlib-time.ld
-- Adding linker script /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_rom/esp32/ld/esp32.rom.ld
-- Adding linker script /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_rom/esp32/ld/esp32.rom.libgcc.ld
-- Adding linker script /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_rom/esp32/ld/esp32.rom.newlib-data.ld
-- Adding linker script /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_rom/esp32/ld/esp32.rom.syscalls.ld
-- Adding linker script /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_rom/esp32/ld/esp32.rom.newlib-funcs.ld
-- Adding linker script /mnt/c/Tara/Code/az-esp-freertos/examples/tls_basic/build/esp-idf/esp32/esp32_out.ld
-- Adding linker script /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp32/ld/esp32.project.ld.in
-- Adding linker script /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp32/ld/esp32.peripherals.ld
-- looking for components
-- starting base component register
-- freertos-/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos
-- azure stuff
-- here
-- Read version from /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/libraries/azure-sdk-for-c/sdk/inc/azure/core/az_version.h
-- AZ_SDK_VERSION_MAJOR 1
-- AZ_SDK_VERSION_MINOR 2
-- AZ_SDK_VERSION_PATCH 0
-- AZ_SDK_VERSION_PRERELEASE beta.1
-- Components: app_trace app_update asio az-esp-freertos bootloader bootloader_support bt cbor coap console cxx driver efuse esp-tls esp32 esp_adc_cal esp_common esp_eth esp_event esp_gdbstub esp_hid esp_http_client esp_http_server esp_https_ota esp_https_server esp_ipc esp_local_ctrl esp_netif esp_ringbuf esp_rom esp_serial_slave_link esp_system esp_timer esp_websocket_client esp_wifi espcoredump esptool_py expat fatfs freemodbus freertos heap idf_test jsmn json libsodium log lwip main mbedtls mdns mqtt newlib nghttp nvs_flash openssl partition_table perfmon protobuf-c protocol_examples_common protocomm pthread sdmmc soc spi_flash spiffs tcp_transport tcpip_adapter tinyusb ulp unity vfs wear_levelling wifi_provisioning wpa_supplicant xtensa
-- Component paths: /mnt/c/Tara/Code/esp/stable/esp-idf/components/app_trace /mnt/c/Tara/Code/esp/stable/esp-idf/components/app_update /mnt/c/Tara/Code/esp/stable/esp-idf/components/asio /mnt/c/Tara/Code/az-esp-freertos /mnt/c/Tara/Code/esp/stable/esp-idf/components/bootloader /mnt/c/Tara/Code/esp/stable/esp-idf/components/bootloader_support /mnt/c/Tara/Code/esp/stable/esp-idf/components/bt /mnt/c/Tara/Code/esp/stable/esp-idf/components/cbor /mnt/c/Tara/Code/esp/stable/esp-idf/components/coap /mnt/c/Tara/Code/esp/stable/esp-idf/components/console /mnt/c/Tara/Code/esp/stable/esp-idf/components/cxx /mnt/c/Tara/Code/esp/stable/esp-idf/components/driver /mnt/c/Tara/Code/esp/stable/esp-idf/components/efuse /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp-tls /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp32 /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_adc_cal /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_common /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_eth /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_event /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_gdbstub /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_hid /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_http_client /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_http_server /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_https_ota /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_https_server /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_ipc /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_local_ctrl /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_netif /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_ringbuf /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_rom /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_serial_slave_link /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_system /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_timer /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_websocket_client /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_wifi /mnt/c/Tara/Code/esp/stable/esp-idf/components/espcoredump /mnt/c/Tara/Code/esp/stable/esp-idf/components/esptool_py /mnt/c/Tara/Code/esp/stable/esp-idf/components/expat /mnt/c/Tara/Code/esp/stable/esp-idf/components/fatfs /mnt/c/Tara/Code/esp/stable/esp-idf/components/freemodbus /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos /mnt/c/Tara/Code/esp/stable/esp-idf/components/heap /mnt/c/Tara/Code/esp/stable/esp-idf/components/idf_test /mnt/c/Tara/Code/esp/stable/esp-idf/components/jsmn /mnt/c/Tara/Code/esp/stable/esp-idf/components/json /mnt/c/Tara/Code/esp/stable/esp-idf/components/libsodium /mnt/c/Tara/Code/esp/stable/esp-idf/components/log /mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip /mnt/c/Tara/Code/az-esp-freertos/examples/tls_basic/main /mnt/c/Tara/Code/esp/stable/esp-idf/components/mbedtls /mnt/c/Tara/Code/esp/stable/esp-idf/components/mdns /mnt/c/Tara/Code/esp/stable/esp-idf/components/mqtt /mnt/c/Tara/Code/esp/stable/esp-idf/components/newlib /mnt/c/Tara/Code/esp/stable/esp-idf/components/nghttp /mnt/c/Tara/Code/esp/stable/esp-idf/components/nvs_flash /mnt/c/Tara/Code/esp/stable/esp-idf/components/openssl /mnt/c/Tara/Code/esp/stable/esp-idf/components/partition_table /mnt/c/Tara/Code/esp/stable/esp-idf/components/perfmon /mnt/c/Tara/Code/esp/stable/esp-idf/components/protobuf-c /mnt/c/Tara/Code/esp/stable/esp-idf/examples/common_components/protocol_examples_common /mnt/c/Tara/Code/esp/stable/esp-idf/components/protocomm /mnt/c/Tara/Code/esp/stable/esp-idf/components/pthread /mnt/c/Tara/Code/esp/stable/esp-idf/components/sdmmc /mnt/c/Tara/Code/esp/stable/esp-idf/components/soc /mnt/c/Tara/Code/esp/stable/esp-idf/components/spi_flash /mnt/c/Tara/Code/esp/stable/esp-idf/components/spiffs /mnt/c/Tara/Code/esp/stable/esp-idf/components/tcp_transport /mnt/c/Tara/Code/esp/stable/esp-idf/components/tcpip_adapter /mnt/c/Tara/Code/esp/stable/esp-idf/components/tinyusb /mnt/c/Tara/Code/esp/stable/esp-idf/components/ulp /mnt/c/Tara/Code/esp/stable/esp-idf/components/unity /mnt/c/Tara/Code/esp/stable/esp-idf/components/vfs /mnt/c/Tara/Code/esp/stable/esp-idf/components/wear_levelling /mnt/c/Tara/Code/esp/stable/esp-idf/components/wifi_provisioning /mnt/c/Tara/Code/esp/stable/esp-idf/components/wpa_supplicant /mnt/c/Tara/Code/esp/stable/esp-idf/components/xtensa
-- project register
-- Configuring done
-- Generating done
-- Build files have been written to: /mnt/c/Tara/Code/az-esp-freertos/examples/tls_basic/build
[1/45] Building C object esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/azure-sdk-for-c/sdk/src/azure/core/CMakeFiles/az_core.dir/az_http_pipeline.c.obj
[2/45] Building C object esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/azure-sdk-for-c/sdk/src/azure/core/CMakeFiles/az_core.dir/az_context.c.obj
[3/45] Building C object esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/azure-sdk-for-c/sdk/src/azure/core/CMakeFiles/az_core.dir/az_http_policy.c.obj
[4/45] Building C object esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/coremqtt.dir/__/libraries/coreMQTT/source/core_mqtt_state.c.obj
[5/45] Building C object esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/coremqtt.dir/__/libraries/coreMQTT/source/core_mqtt_serializer.c.obj
[6/45] Building C object esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/coremqtt.dir/__/libraries/coreMQTT/source/core_mqtt.c.obj
[7/45] Building C object esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/__/ports/coreMQTT/azure_iot_core_mqtt.c.obj
FAILED: esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/__/ports/coreMQTT/azure_iot_core_mqtt.c.obj 
/mnt/c/Tara/Code/esp/stable/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DMQTT_DO_NOT_USE_CUSTOM_CONFIG -Iconfig -I../../../port/logging -I../../../port/platform -I../../../port/config -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos -I../../../azure-iot-middleware-freertos/source/include -I../../../azure-iot-middleware-freertos/source/interface -I../../../azure-iot-middleware-freertos/source/../ports/coreMQTT -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/newlib/platform_include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/heap/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/log/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/include/apps -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/include/apps/sntp -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/lwip/src/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/port/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/port/esp32/include/arch -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/src/esp32/. -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/src/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_rom/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_common/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_system/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/xtensa/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/xtensa/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/driver/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/driver/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_ringbuf/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/efuse/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/efuse/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/espcoredump/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_timer/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_ipc/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/soc/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/soc/esp32/../include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/soc/esp32/private_include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/vfs/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_wifi/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_wifi/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_event/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_netif/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_eth/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/tcpip_adapter/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/app_trace/include -I../../../azure-iot-middleware-freertos/libraries/azure-sdk-for-c/sdk/inc -I../../../azure-iot-middleware-freertos/libraries/azure-sdk-for-c/sdk/tests/core/inc -I../../../azure-iot-middleware-freertos/source/../libraries/coreMQTT/source/include -I../../../azure-iot-middleware-freertos/source/../libraries/coreMQTT/source/interface -mlongcalls -Wno-frame-address -ffunction-sections -fdata-sections -fstrict-volatile-bitfields -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-but-set-variable -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -ggdb -Og -std=gnu99 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v4.2-dirty\" -DESP_PLATFORM -pedantic -Werror -Wunused -Wuninitialized -Wmissing-declarations -Wconversion -Wpointer-arith -Wshadow -Wlogical-op -Wfloat-equal -std=gnu99 -MD -MT esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/__/ports/coreMQTT/azure_iot_core_mqtt.c.obj -MF esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/__/ports/coreMQTT/azure_iot_core_mqtt.c.obj.d -o esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/__/ports/coreMQTT/azure_iot_core_mqtt.c.obj -c /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/ports/coreMQTT/azure_iot_core_mqtt.c
In file included from /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/ports/coreMQTT/azure_iot_core_mqtt.c:13:
/mnt/c/Tara/Code/esp/stable/esp-idf/components/newlib/platform_include/assert.h:24:2: error: #include_next is a GCC extension [-Werror]
 #include_next <assert.h>
  ^~~~~~~~~~~~
cc1: all warnings being treated as errors
[8/45] Linking CXX static library esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/libcoremqtt.a
[9/45] Building C object esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/azure-sdk-for-c/sdk/src/azure/core/CMakeFiles/az_core.dir/az_http_policy_retry.c.obj
[10/45] Building C object esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/azure-sdk-for-c/sdk/src/azure/core/CMakeFiles/az_core.dir/az_http_request.c.obj
FAILED: esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/azure-sdk-for-c/sdk/src/azure/core/CMakeFiles/az_core.dir/az_http_request.c.obj 
/mnt/c/Tara/Code/esp/stable/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc  -Iconfig -I../../../port/logging -I../../../port/platform -I../../../port/config -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos -I../../../azure-iot-middleware-freertos/libraries/azure-sdk-for-c/sdk/inc -I../../../azure-iot-middleware-freertos/libraries/azure-sdk-for-c/sdk/tests/core/inc -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/newlib/platform_include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/heap/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/log/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/include/apps -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/include/apps/sntp -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/lwip/src/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/port/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/port/esp32/include/arch -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/src/esp32/. -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/src/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_rom/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_common/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_system/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/xtensa/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/xtensa/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/driver/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/driver/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_ringbuf/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/efuse/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/efuse/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/espcoredump/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_timer/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_ipc/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/soc/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/soc/esp32/../include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/soc/esp32/private_include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/vfs/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_wifi/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_wifi/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_event/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_netif/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_eth/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/tcpip_adapter/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/app_trace/include -mlongcalls -Wno-frame-address -ffunction-sections -fdata-sections -fstrict-volatile-bitfields -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-but-set-variable -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -ggdb -Og -std=gnu99 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v4.2-dirty\" -DESP_PLATFORM -pedantic -Werror -Wcast-qual -Wunused -Wuninitialized -Wmissing-declarations -Wconversion -Wpointer-arith -Wshadow -Wlogical-op -Wfloat-equal -std=gnu99 -MD -MT esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/azure-sdk-for-c/sdk/src/azure/core/CMakeFiles/az_core.dir/az_http_request.c.obj -MF esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/azure-sdk-for-c/sdk/src/azure/core/CMakeFiles/az_core.dir/az_http_request.c.obj.d -o esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/azure-sdk-for-c/sdk/src/azure/core/CMakeFiles/az_core.dir/az_http_request.c.obj -c /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/libraries/azure-sdk-for-c/sdk/src/azure/core/az_http_request.c
In file included from /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/libraries/azure-sdk-for-c/sdk/src/azure/core/az_http_request.c:16:
/mnt/c/Tara/Code/esp/stable/esp-idf/components/newlib/platform_include/assert.h:24:2: error: #include_next is a GCC extension [-Werror]
 #include_next <assert.h>
  ^~~~~~~~~~~~
cc1: all warnings being treated as errors
[11/45] Building C object esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/azure-sdk-for-c/sdk/src/azure/core/CMakeFiles/az_core.dir/az_http_policy_logging.c.obj
[12/45] Building C object esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/azure_iot.c.obj
FAILED: esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/azure_iot.c.obj 
/mnt/c/Tara/Code/esp/stable/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DMQTT_DO_NOT_USE_CUSTOM_CONFIG -Iconfig -I../../../port/logging -I../../../port/platform -I../../../port/config -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos -I../../../azure-iot-middleware-freertos/source/include -I../../../azure-iot-middleware-freertos/source/interface -I../../../azure-iot-middleware-freertos/source/../ports/coreMQTT -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/newlib/platform_include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/heap/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/log/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/include/apps -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/include/apps/sntp -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/lwip/src/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/port/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/port/esp32/include/arch -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/src/esp32/. -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/src/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_rom/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_common/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_system/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/xtensa/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/xtensa/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/driver/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/driver/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_ringbuf/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/efuse/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/efuse/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/espcoredump/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_timer/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_ipc/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/soc/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/soc/esp32/../include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/soc/esp32/private_include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/vfs/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_wifi/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_wifi/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_event/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_netif/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_eth/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/tcpip_adapter/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/app_trace/include -I../../../azure-iot-middleware-freertos/libraries/azure-sdk-for-c/sdk/inc -I../../../azure-iot-middleware-freertos/libraries/azure-sdk-for-c/sdk/tests/core/inc -I../../../azure-iot-middleware-freertos/source/../libraries/coreMQTT/source/include -I../../../azure-iot-middleware-freertos/source/../libraries/coreMQTT/source/interface -mlongcalls -Wno-frame-address -ffunction-sections -fdata-sections -fstrict-volatile-bitfields -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-but-set-variable -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -ggdb -Og -std=gnu99 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v4.2-dirty\" -DESP_PLATFORM -pedantic -Werror -Wunused -Wuninitialized -Wmissing-declarations -Wconversion -Wpointer-arith -Wshadow -Wlogical-op -Wfloat-equal -std=gnu99 -MD -MT esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/azure_iot.c.obj -MF esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/azure_iot.c.obj.d -o esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/azure_iot.c.obj -c /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot.c
In file included from /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_common/include/esp_err.h:18,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_timer/include/esp_timer.h:44,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h:84,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/portable.h:95,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/FreeRTOS.h:107,
                 from ../../../azure-iot-middleware-freertos/source/include/azure_iot.h:31,
                 from /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot.c:13:
/mnt/c/Tara/Code/esp/stable/esp-idf/components/newlib/platform_include/assert.h:24:2: error: #include_next is a GCC extension [-Werror]
 #include_next <assert.h>
  ^~~~~~~~~~~~
In file included from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/portable.h:95,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/FreeRTOS.h:107,
                 from ../../../azure-iot-middleware-freertos/source/include/azure_iot.h:31,
                 from /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot.c:13:
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h: In function 'vPortEnterCriticalCompliance':
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h:230:21: error: ISO C does not support '__FUNCTION__' predefined identifier [-Werror=pedantic]
                     __FUNCTION__);
                     ^~~~~~~~~~~~
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h: In function 'vPortExitCriticalCompliance':
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h:241:21: error: ISO C does not support '__FUNCTION__' predefined identifier [-Werror=pedantic]
                     __FUNCTION__);
                     ^~~~~~~~~~~~
In file included from /mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/include/soc/cpu.h:27,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/include/soc/spinlock.h:19,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h:85,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/portable.h:95,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/FreeRTOS.h:107,
                 from ../../../azure-iot-middleware-freertos/source/include/azure_iot.h:31,
                 from /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot.c:13:
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/portable.h: In function 'xPortGetCoreID':
/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/include/hal/cpu_hal.h:35:41: error: conversion to 'uint32_t' {aka 'unsigned int'} from 'int' may change the sign of the result [-Werror=sign-conversion]
 #define cpu_hal_get_core_id()           cpu_ll_get_core_id()
                                         ^~~~~~~~~~~~~~~~~~~~
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/portable.h:205:12: note: in expansion of macro 'cpu_hal_get_core_id'
     return cpu_hal_get_core_id();
            ^~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
[13/45] Building C object esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/azure-sdk-for-c/sdk/src/azure/core/CMakeFiles/az_core.dir/az_http_response.c.obj
[14/45] Building C object esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/azure_iot_provisioning_client.c.obj
FAILED: esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/azure_iot_provisioning_client.c.obj 
/mnt/c/Tara/Code/esp/stable/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DMQTT_DO_NOT_USE_CUSTOM_CONFIG -Iconfig -I../../../port/logging -I../../../port/platform -I../../../port/config -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos -I../../../azure-iot-middleware-freertos/source/include -I../../../azure-iot-middleware-freertos/source/interface -I../../../azure-iot-middleware-freertos/source/../ports/coreMQTT -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/newlib/platform_include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/heap/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/log/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/include/apps -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/include/apps/sntp -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/lwip/src/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/port/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/port/esp32/include/arch -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/src/esp32/. -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/src/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_rom/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_common/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_system/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/xtensa/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/xtensa/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/driver/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/driver/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_ringbuf/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/efuse/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/efuse/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/espcoredump/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_timer/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_ipc/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/soc/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/soc/esp32/../include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/soc/esp32/private_include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/vfs/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_wifi/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_wifi/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_event/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_netif/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_eth/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/tcpip_adapter/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/app_trace/include -I../../../azure-iot-middleware-freertos/libraries/azure-sdk-for-c/sdk/inc -I../../../azure-iot-middleware-freertos/libraries/azure-sdk-for-c/sdk/tests/core/inc -I../../../azure-iot-middleware-freertos/source/../libraries/coreMQTT/source/include -I../../../azure-iot-middleware-freertos/source/../libraries/coreMQTT/source/interface -mlongcalls -Wno-frame-address -ffunction-sections -fdata-sections -fstrict-volatile-bitfields -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-but-set-variable -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -ggdb -Og -std=gnu99 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v4.2-dirty\" -DESP_PLATFORM -pedantic -Werror -Wunused -Wuninitialized -Wmissing-declarations -Wconversion -Wpointer-arith -Wshadow -Wlogical-op -Wfloat-equal -std=gnu99 -MD -MT esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/azure_iot_provisioning_client.c.obj -MF esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/azure_iot_provisioning_client.c.obj.d -o esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/azure_iot_provisioning_client.c.obj -c /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_provisioning_client.c
In file included from /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_common/include/esp_err.h:18,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_timer/include/esp_timer.h:44,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h:84,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/portable.h:95,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/FreeRTOS.h:107,
                 from ../../../azure-iot-middleware-freertos/source/include/azure_iot_provisioning_client.h:18,
                 from /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_provisioning_client.c:10:
/mnt/c/Tara/Code/esp/stable/esp-idf/components/newlib/platform_include/assert.h:24:2: error: #include_next is a GCC extension [-Werror]
 #include_next <assert.h>
  ^~~~~~~~~~~~
In file included from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/portable.h:95,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/FreeRTOS.h:107,
                 from ../../../azure-iot-middleware-freertos/source/include/azure_iot_provisioning_client.h:18,
                 from /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_provisioning_client.c:10:
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h: In function 'vPortEnterCriticalCompliance':
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h:230:21: error: ISO C does not support '__FUNCTION__' predefined identifier [-Werror=pedantic]
                     __FUNCTION__);
                     ^~~~~~~~~~~~
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h: In function 'vPortExitCriticalCompliance':
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h:241:21: error: ISO C does not support '__FUNCTION__' predefined identifier [-Werror=pedantic]
                     __FUNCTION__);
                     ^~~~~~~~~~~~
In file included from /mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/include/soc/cpu.h:27,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/include/soc/spinlock.h:19,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h:85,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/portable.h:95,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/FreeRTOS.h:107,
                 from ../../../azure-iot-middleware-freertos/source/include/azure_iot_provisioning_client.h:18,
                 from /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_provisioning_client.c:10:
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/portable.h: In function 'xPortGetCoreID':
/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/include/hal/cpu_hal.h:35:41: error: conversion to 'uint32_t' {aka 'unsigned int'} from 'int' may change the sign of the result [-Werror=sign-conversion]
 #define cpu_hal_get_core_id()           cpu_ll_get_core_id()
                                         ^~~~~~~~~~~~~~~~~~~~
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/portable.h:205:12: note: in expansion of macro 'cpu_hal_get_core_id'
     return cpu_hal_get_core_id();
            ^~~~~~~~~~~~~~~~~~~
In file included from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/task.h:80,
                 from /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_provisioning_client.c:14:
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/list.h: At top level:
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/list.h:194:1: error: ISO C99 does not support '_Static_assert' [-Werror=pedantic]
 _Static_assert(sizeof(StaticListItem_t) == sizeof(ListItem_t), "StaticListItem_t != ListItem_t");
 ^~~~~~~~~~~~~~
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/list.h:207:1: error: ISO C99 does not support '_Static_assert' [-Werror=pedantic]
 _Static_assert(sizeof(StaticMiniListItem_t) == sizeof(MiniListItem_t), "StaticMiniListItem_t != MiniListItem_t");
 ^~~~~~~~~~~~~~
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/list.h:224:1: error: ISO C99 does not support '_Static_assert' [-Werror=pedantic]
 _Static_assert(sizeof(StaticList_t) == sizeof(List_t), "StaticList_t != List_t");
 ^~~~~~~~~~~~~~
In file included from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/FreeRTOS.h:101,
                 from ../../../azure-iot-middleware-freertos/source/include/azure_iot_provisioning_client.h:18,
                 from /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_provisioning_client.c:10:
/mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_provisioning_client.c: In function 'prvProvClientUpdateState':
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/FreeRTOSConfig.h:139:20: error: ISO C does not support '__FUNCTION__' predefined identifier [-Werror=pedantic]
                    __FUNCTION__);                                       \
                    ^~~~~~~~~~~~
/mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_provisioning_client.c:128:13: note: in expansion of macro 'configASSERT'
             configASSERT( false );
             ^~~~~~~~~~~~
/mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_provisioning_client.c: In function 'prvProvClientTriggerAction':
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/FreeRTOSConfig.h:139:20: error: ISO C does not support '__FUNCTION__' predefined identifier [-Werror=pedantic]
                    __FUNCTION__);                                       \
                    ^~~~~~~~~~~~
/mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_provisioning_client.c:490:13: note: in expansion of macro 'configASSERT'
             configASSERT( false );
             ^~~~~~~~~~~~
cc1: all warnings being treated as errors
[15/45] Building C object esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/azure-sdk-for-c/sdk/src/azure/core/CMakeFiles/az_core.dir/az_json_reader.c.obj
[16/45] Building C object esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/azure_iot_hub_client.c.obj
FAILED: esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/azure_iot_hub_client.c.obj 
/mnt/c/Tara/Code/esp/stable/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DMQTT_DO_NOT_USE_CUSTOM_CONFIG -Iconfig -I../../../port/logging -I../../../port/platform -I../../../port/config -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos -I../../../azure-iot-middleware-freertos/source/include -I../../../azure-iot-middleware-freertos/source/interface -I../../../azure-iot-middleware-freertos/source/../ports/coreMQTT -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/newlib/platform_include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/heap/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/log/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/include/apps -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/include/apps/sntp -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/lwip/src/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/port/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/lwip/port/esp32/include/arch -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/src/esp32/. -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/src/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_rom/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_common/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_system/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/xtensa/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/xtensa/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/driver/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/driver/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_ringbuf/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/efuse/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/efuse/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/espcoredump/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_timer/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_ipc/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/soc/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/soc/esp32/../include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/soc/esp32/private_include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/vfs/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_wifi/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_wifi/esp32/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_event/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_netif/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_eth/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/tcpip_adapter/include -I/mnt/c/Tara/Code/esp/stable/esp-idf/components/app_trace/include -I../../../azure-iot-middleware-freertos/libraries/azure-sdk-for-c/sdk/inc -I../../../azure-iot-middleware-freertos/libraries/azure-sdk-for-c/sdk/tests/core/inc -I../../../azure-iot-middleware-freertos/source/../libraries/coreMQTT/source/include -I../../../azure-iot-middleware-freertos/source/../libraries/coreMQTT/source/interface -mlongcalls -Wno-frame-address -ffunction-sections -fdata-sections -fstrict-volatile-bitfields -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-but-set-variable -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -ggdb -Og -std=gnu99 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v4.2-dirty\" -DESP_PLATFORM -pedantic -Werror -Wunused -Wuninitialized -Wmissing-declarations -Wconversion -Wpointer-arith -Wshadow -Wlogical-op -Wfloat-equal -std=gnu99 -MD -MT esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/azure_iot_hub_client.c.obj -MF esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/azure_iot_hub_client.c.obj.d -o esp-idf/az-esp-freertos/azure-iot-middleware-freertos/source/CMakeFiles/az_iot_middleware_freertos.dir/azure_iot_hub_client.c.obj -c /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_hub_client.c
In file included from /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_common/include/esp_err.h:18,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/esp_timer/include/esp_timer.h:44,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h:84,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/portable.h:95,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/FreeRTOS.h:107,
                 from ../../../azure-iot-middleware-freertos/source/include/azure_iot.h:31,
                 from ../../../azure-iot-middleware-freertos/source/include/azure_iot_hub_client.h:19,
                 from /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_hub_client.c:9:
/mnt/c/Tara/Code/esp/stable/esp-idf/components/newlib/platform_include/assert.h:24:2: error: #include_next is a GCC extension [-Werror]
 #include_next <assert.h>
  ^~~~~~~~~~~~
In file included from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/portable.h:95,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/FreeRTOS.h:107,	
                 from ../../../azure-iot-middleware-freertos/source/include/azure_iot.h:31,
                 from ../../../azure-iot-middleware-freertos/source/include/azure_iot_hub_client.h:19,
                 from /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_hub_client.c:9:
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h: In function 'vPortEnterCriticalCompliance':
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h:230:21: error: ISO C does not support '__FUNCTION__' predefined identifier [-Werror=pedantic]
                     __FUNCTION__);
                     ^~~~~~~~~~~~
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h: In function 'vPortExitCriticalCompliance':
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h:241:21: error: ISO C does not support '__FUNCTION__' predefined identifier [-Werror=pedantic]
                     __FUNCTION__);
                     ^~~~~~~~~~~~
In file included from /mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/include/soc/cpu.h:27,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/include/soc/spinlock.h:19,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/portmacro.h:85,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/portable.h:95,
                 from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/FreeRTOS.h:107,
                 from ../../../azure-iot-middleware-freertos/source/include/azure_iot.h:31,
                 from ../../../azure-iot-middleware-freertos/source/include/azure_iot_hub_client.h:19,
                 from /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_hub_client.c:9:
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/portable.h: In function 'xPortGetCoreID':
/mnt/c/Tara/Code/esp/stable/esp-idf/components/soc/include/hal/cpu_hal.h:35:41: error: conversion to 'uint32_t' {aka 'unsigned int'} from 'int' may change the sign of the result [-Werror=sign-conversion]
 #define cpu_hal_get_core_id()           cpu_ll_get_core_id()
                                         ^~~~~~~~~~~~~~~~~~~~
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/portable.h:205:12: note: in expansion of macro 'cpu_hal_get_core_id'
     return cpu_hal_get_core_id();
            ^~~~~~~~~~~~~~~~~~~
In file included from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/task.h:80,
                 from /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_hub_client.c:13:
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/list.h: At top level:
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/list.h:194:1: error: ISO C99 does not support '_Static_assert' [-Werror=pedantic]
 _Static_assert(sizeof(StaticListItem_t) == sizeof(ListItem_t), "StaticListItem_t != ListItem_t");
 ^~~~~~~~~~~~~~
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/list.h:207:1: error: ISO C99 does not support '_Static_assert' [-Werror=pedantic]
 _Static_assert(sizeof(StaticMiniListItem_t) == sizeof(MiniListItem_t), "StaticMiniListItem_t != MiniListItem_t");
 ^~~~~~~~~~~~~~
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/list.h:224:1: error: ISO C99 does not support '_Static_assert' [-Werror=pedantic]
 _Static_assert(sizeof(StaticList_t) == sizeof(List_t), "StaticList_t != List_t");
 ^~~~~~~~~~~~~~
In file included from /mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/include/freertos/FreeRTOS.h:101,
                 from ../../../azure-iot-middleware-freertos/source/include/azure_iot.h:31,
                 from ../../../azure-iot-middleware-freertos/source/include/azure_iot_hub_client.h:19,
                 from /mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_hub_client.c:9:
/mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_hub_client.c: In function 'prvMQTTProcessIncomingPublish':
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/FreeRTOSConfig.h:139:20: error: ISO C does not support '__FUNCTION__' predefined identifier [-Werror=pedantic]
                    __FUNCTION__);                                       \
                    ^~~~~~~~~~~~
/mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_hub_client.c:67:5: note: in expansion of macro 'configASSERT'
     configASSERT( pxPublishInfo != NULL );
     ^~~~~~~~~~~~
/mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_hub_client.c: In function 'prvMQTTProcessSuback':
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/FreeRTOSConfig.h:139:20: error: ISO C does not support '__FUNCTION__' predefined identifier [-Werror=pedantic]
                    __FUNCTION__);                                       \
                    ^~~~~~~~~~~~
/mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_hub_client.c:105:5: note: in expansion of macro 'configASSERT'
     configASSERT( pxIncomingPacket != NULL );
     ^~~~~~~~~~~~
/mnt/c/Tara/Code/esp/stable/esp-idf/components/freertos/xtensa/include/freertos/FreeRTOSConfig.h:139:20: error: ISO C does not support '__FUNCTION__' predefined identifier [-Werror=pedantic]
                    __FUNCTION__);                                       \
                    ^~~~~~~~~~~~
/mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_hub_client.c:106:5: note: in expansion of macro 'configASSERT'
     configASSERT( ( azureiotmqttGET_PACKET_TYPE( pxIncomingPacket->ucType ) ) == azureiotmqttPACKET_TYPE_SUBACK );
     ^~~~~~~~~~~~
/mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_hub_client.c: In function 'prvAzureIoTHubClientC2DProcess':
/mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_hub_client.c:203:12: error: 'xResult' may be used uninitialized in this function [-Werror=maybe-uninitialized]
     return xResult;
            ^~~~~~~
/mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_hub_client.c: In function 'prvAzureIoTHubClientDirectMethodProcess':
/mnt/c/Tara/Code/az-esp-freertos/azure-iot-middleware-freertos/source/azure_iot_hub_client.c:256:12: error: 'xResult' may be used uninitialized in this function [-Werror=maybe-uninitialized]
     return xResult;
            ^~~~~~~
cc1: all warnings being treated as errors
ninja: build stopped: subcommand failed.
Adding "size-components"'s dependency "app" to list of commands with default set of options.
Executing action: app
Running ninja in directory /mnt/c/Tara/Code/az-esp-freertos/examples/tls_basic/build
Executing "ninja app"...
ninja failed with exit code 1
